--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "firebase": "^9.0.1",
     "multer": "^1.4.3",
     "pg": "^8.7.1",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "youch": "^2.2.2"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
