--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "seed:revert": "sequelize db:seed:undo",
     "seed:revertAll": "sequelize db:seed:undo:all",
     "start": "sequelize db:migrate && nodemon --exec sucrase-node src/server.js",
-    "test": "sequelize db:migrate:undo:all && sequelize db:migrate && jest --collect-coverage",
+    "test": "jest",
     "lint": "eslint --ext .js,.ts,.tsx src/"
   },
   "dependencies": {
