--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.1.0",
+    "node-pre-gyp": "^0.17.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.2",
     "sucrase": "^3.20.1",
     "supertest": "^6.1.6"
   }
