--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "seed:revertAll": "sequelize db:seed:undo:all",
     "start": "sequelize db:migrate && nodemon --exec sucrase-node src/server.js",
     "test": "sequelize db:migrate:undo:all && sequelize db:migrate && jest",
-    "lint": "eslint --ext .js,.ts,.tsx src/"
+    "lint": "eslint --ext .js,.ts,.tsx src/", 
+    "build": "sucrase ./src -d ./build --transpiles import", 
+    "start:prod": "sequelize db:migrate && node build/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
