--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "seed:run": "sequelize db:seed:all",
     "seed:revert": "sequelize db:seed:undo",
     "seed:revertAll": "sequelize db:seed:undo:all",
-    "start": "sequelize db:migrate && nodemon --exec sucrase-node src/server.js",
+    "start": "sequelize db:migrate && sequelize db:seed:all && nodemon --exec sucrase-node src/server.js",
     "test": "sequelize db:migrate:undo:all && sequelize db:migrate && jest",
-    "lint": "eslint --ext .js,.ts,.tsx src/", 
+    "lint": "eslint --ext .js,.ts,.tsx src/",
     "build": "sucrase ./src -d ./build --transforms imports",
     "start:prod": "sequelize db:migrate && node build/server.js"
   },
