--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [10.x, 12]
+        node-version: [16.x]
     
     steps:
       - uses: actions/checkout@v2 
