--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "seed:revert": "sequelize db:seed:undo",
         "seed:revertAll": "sequelize db:seed:undo:all",
         "start": "sequelize db:migrate && nodemon --exec sucrase-node src/server.js",
-        "pretest": "node src/__tests__/util/sync.js && NODE_ENV=test sequelize db:migrate",
+        "pretest": "node tests/util/sync.js && NODE_ENV=test sequelize db:migrate",
         "test": "NODE_ENV=test jest --coverage",
         "lint": "eslint --ext .js,.ts,.tsx src/",
         "lint:fix": "eslint --ext .js,.ts,.tsx src/ --fix",
