--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,9 +2,9 @@ sonar.organization=fga-eps-mds-1
 sonar.projectKey=fga-eps-mds_2021.1-Multilind-content-server
 
 sonar.sources=./src
-sonar.exclusions=./src/__tests__/**/*.js
+sonar.exclusions=./tests/**/*.js
 sonar.language=js
-sonar.tests=./src/__tests__
+sonar.tests=./tests
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=./coverage/test-report.xml
