--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "dependencies": {
         "@babel/preset-env": "^7.16.0",
         "babel-jest": "^27.3.1",
+        "core-js": "^3.19.1",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "firebase": "^9.0.1",
         "multer": "^1.4.3",
         "pg": "^8.7.1",
+        "regenerator-runtime": "^0.13.9",
         "sequelize": "^6.6.5",
         "ts-jest": "^27.0.7",
         "youch": "^2.2.2"
